deploy-backend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: backend-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: backend01
    role: backend
  name: backend01
  namespace: backend-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend01
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend01
        role: backend
    spec:
      containers:
      - image: quay.io/cvicens/backend01:3.1
        name: backend01
        resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: backend02
    role: backend
  name: backend02
  namespace: backend-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend02
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: backend02
        role: backend
    spec:
      containers:
      - image: quay.io/cvicens/backend02:3.1
        name: backend02
        resources: {}
---
kind: Service
apiVersion: v1
metadata:
  name: backend01
  namespace: backend-dev
  labels:
    app: backend01
    role: backend
spec:
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: backend01
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: backend02
  namespace: backend-dev
  labels:
    app: backend02
    role: backend
spec:
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: backend02
  type: ClusterIP
