deploy-frontend.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: dotnet-frontend
  labels:
    project: dotnet-frontend
    role: frontend
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: gateway01
    role: frontend
  name: gateway01
  namespace: dotnet-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway01
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gateway01
        role: frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: role
                operator: In
                values:
                - frontend
      containers:
      - image: quay.io/cvicens/gateway01:3.1
        name: gateway01
        resources: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: gateway02
    role: frontend
  name: gateway02
  namespace: dotnet-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway02
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: gateway02
        role: frontend
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: role
                operator: In
                values:
                - frontend
      containers:
      - image: quay.io/cvicens/gateway02:3.1
        name: gateway02
        resources: {}
---
kind: Service
apiVersion: v1
metadata:
  name: gateway01
  namespace: dotnet-frontend
  labels:
    app: gateway01
    role: frontend
spec:
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: gateway01
  type: ClusterIP
---
kind: Service
apiVersion: v1
metadata:
  name: gateway02
  namespace: dotnet-frontend
  labels:
    app: gateway02
    role: frontend
spec:
  ports:
    - name: 5000-tcp
      protocol: TCP
      port: 5000
      targetPort: 5000
  selector:
    app: gateway02
  type: ClusterIP
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gateway01
  namespace: dotnet-frontend
  labels:
    app: gateway01
    role: frontend
spec:
  to:
    kind: Service
    name: gateway01
    weight: 100
  port:
    targetPort: 5000-tcp
  wildcardPolicy: None
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gateway02
  namespace: dotnet-frontend
  labels:
    app: gateway02
    role: frontend
spec:
  to:
    kind: Service
    name: gateway02
    weight: 100
  port:
    targetPort: 5000-tcp
  wildcardPolicy: None
